@@ -3,6 +3,7 @@ Version XXX
 	Fixed [ 1060777 ] Make keybindings work automatically
 	Fixed [ 1232632 ] Alt-w does not work anymore
 	Partially Implemented [ 1597549 ] Activate the spelling the checker Eclipse 3.2
+Fixed the URL Matcher
 
 Version 2.5.0
 	Added Kim Tiedemanm's patch for forced links in the SnipSnap renderer.
